# bare-midi

./: .gitignore  CMakeLists.txt  binding.c  example.js  index.js  package.json
cmake/ports/portmidi/: port.cmake
